Bug 1130913: Only create a new decoder if we have a new media segment. r=mattwoodrow